kubernetes/efwservice/efwservice-elasticsearch.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: efwservice-elasticsearch
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: efwservice-elasticsearch
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: elasticsearch
        image: elasticsearch:5.6.13
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data/
---
apiVersion: v1
kind: Service
metadata:
  name: efwservice-elasticsearch
  namespace: default
spec:
  selector:
    app: efwservice-elasticsearch
  ports:
  - port: 9200
    name: http
    protocol: TCP
  - port: 9300
    name: transport
    protocol: TCP
