kubernetes/efwservice/efwservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: efwservice
  namespace: default
  labels:
    app: efwservice
spec:
  selector:
    app: efwservice
  ports:
  - name: http
    port: 8081
